create product api
