# models/Product.js
@@ -1,5 +1,4 @@
-
-var mongoose = require('mongoose');
+var mongoose = require("mongoose");
 
 var productSchema = mongoose.Schema({
   imagePath: {
@@ -31,43 +30,46 @@ var productSchema = mongoose.Schema({
   }
 });
 
-var Product = module.exports = mongoose.model('Product', productSchema);
+var Product = (module.exports = mongoose.model("Product", productSchema));
 
-module.exports.getAllProducts = function (query, sort, callback) {
-  Product.find(query, null, sort, callback)
-}
+module.exports.getAllProducts = function(query, sort, callback) {
+  Product.find(query, null, sort, callback);
+};
 
-module.exports.getProductByDepartment = function (query,sort, callback) {
-  Product.find(query, null, sort, callback)
-}
+module.exports.getProductByDepartment = function(query, sort, callback) {
+  Product.find(query, null, sort, callback);
+};
 
-module.exports.getProductByCategory = function (query,sort, callback) {
-  Product.find(query, null, sort, callback)
-}
+module.exports.getProductByCategory = function(query, sort, callback) {
+  Product.find(query, null, sort, callback);
+};
 
-module.exports.getProductByTitle = function (query,sort, callback) {
-  Product.find(query, null, sort, callback)
-}
+module.exports.getProductByTitle = function(query, sort, callback) {
+  Product.find(query, null, sort, callback);
+};
 
-module.exports.filterProductByDepartment = function (department, callback) {
-  let regexp = new RegExp(`${department}`, 'i')
+module.exports.filterProductByDepartment = function(department, callback) {
+  let regexp = new RegExp(`${department}`, "i");
   var query = { department: { $regex: regexp } };
-  Product.find(query, callback)
-}
+  Product.find(query, callback);
+};
 
-module.exports.filterProductByCategory = function (category, callback) {
-  let regexp = new RegExp(`${category}`, 'i')
+module.exports.filterProductByCategory = function(category, callback) {
+  let regexp = new RegExp(`${category}`, "i");
   var query = { category: { $regex: regexp } };
   Product.find(query, callback);
-}
+};
 
-module.exports.filterProductByTitle = function (title, callback) {
-  let regexp = new RegExp(`${title}`, 'i')
+module.exports.filterProductByTitle = function(title, callback) {
+  let regexp = new RegExp(`${title}`, "i");
   var query = { title: { $regex: regexp } };
   Product.find(query, callback);
-}
+};
 
-module.exports.getProductByID = function (id, callback) {
+module.exports.getProductByID = function(id, callback) {
   Product.findById(id, callback);
-}
+};
 
+module.exports.createProduct = function(product, callback) {
+  product.save(callback);
+};
